--- a/ss3/exercise/angular-calculator-app/src/app/calculator/calculator.component.html
+++ b/ss3/exercise/angular-calculator-app/src/app/calculator/calculator.component.html
@@ -7,8 +7,8 @@
 <input type="text" [(ngModel)]="number2">
 <br>
 
-<button (click)="Addition()">Addition(+)</button>
-<button (click)="Subtraction()">Subtraction(-)</button><br>
-<button (click)="Multiplication()">Multiplication(X)</button>
-<button (click)="Division()">Division(/)</button><br>
+<button (click)="change('Addition')">Addition(+)</button>
+<button (click)="change('Subtraction')">Subtraction(-)</button><br>
+<button (click)="change('Multiplication')">Multiplication(X)</button>
+<button (click)="change('Division')">Division(/)</button><br>
 <p>Result: {{result}}</p>
