--- a/case2/src/app/customer/customer.component.html
+++ b/case2/src/app/customer/customer.component.html
@@ -1,4 +1,3 @@
-<!-- bradcam_area_start -->
 <div class="bradcam_area breadcam_bg">
   <h3>Customer</h3>
 </div>
@@ -38,7 +37,7 @@
           <td>Diamond</td>
 
           <td>
-            <button class="btn btn-primary">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
               Update
             </button>
           </td>
@@ -84,7 +83,7 @@
           <td>Platinum</td>
 
           <td>
-            <button class="btn btn-primary">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
               Update
             </button>
           </td>
@@ -131,7 +130,7 @@
           <td>Gold</td>
 
           <td>
-            <button class="btn btn-primary">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
               Update
             </button>
           </td>
@@ -165,7 +164,6 @@
             </div>
           </td>
         </tr>
-
         <tr>
           <td>4</td>
           <td>KH-4444</td>
@@ -176,9 +174,8 @@
           <td>683453534</td>
           <td>Đà Nẵng</td>
           <td>Silver</td>
-
           <td>
-            <button class="btn btn-primary">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
               Update
             </button>
           </td>
@@ -224,3 +221,5 @@
     </div>
   </div>
 </div>
+<app-modal-edit></app-modal-edit>
+<app-modal-create></app-modal-create>
