--- a/case2/src/app/header/header.component.html
+++ b/case2/src/app/header/header.component.html
@@ -11,17 +11,17 @@
             <div class="main-menu  d-none d-lg-block">
               <nav>
                 <ul id="navigation">
-                  <li><a class="active" href="index.html">home</a></li>
-                  <li><a href="app/facility/facility.component.html">Facility</a></li>
-                  <li><a href="app/customer/customer.component.html">Customer</a></li>
-                  <li><a href="app/contract/contract.component.html">Contract</a></li>
+                  <li><a href="http://localhost:4200/home">Home</a></li>
+                  <li><a routerLink="/facility">Facility</a></li>
+                  <li><a routerLink="/customer">Customer</a></li>
+                  <li><a routerLink="/contract">Contract</a></li>
                 </ul>
               </nav>
             </div>
           </div>
           <div class="col-xl-2 col-lg-2">
             <div class="logo-img">
-              <a href="index.html">
+              <a href="http://localhost:4200/home">
                 <img src="assets/img/logo.png" style=" height: 100px;
                                          width: 128px" alt="">
               </a>
