--- a/case2/src/app/app.component.html
+++ b/case2/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 <!--<app-home></app-home>-->
-<app-facility></app-facility>
+<!--<app-facility></app-facility>-->
 <!--<app-customer></app-customer>-->
 <!--<app-contract></app-contract>-->
+<router-outlet></router-outlet>
 <app-footer></app-footer>
