--- a/case2/src/app/contract/modal-create-contract/modal-create-contract.component.html
+++ b/case2/src/app/contract/modal-create-contract/modal-create-contract.component.html
@@ -1,1 +1,39 @@
-<p>modal-create-contract works!</p>
+
+<!--                modal create contract-->
+
+<div class="modal" id="myModalCreateContract">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="p-3 bg-modal">
+        <h4 style="text-align: center">Add New Customer</h4>
+
+        <div class="form-group">
+          <label>Time Start</label>
+          <input class="form-control" type="date" id="add-customerCode">
+        </div>
+
+        <div class="form-group">
+          <label>Time End</label>
+          <input class="form-control" type="date" id="add-customerName">
+
+        </div>
+
+        <div class="form-group">
+          <label>Deposit Amount</label>
+          <input class="form-control" type="text" id="add-customerBirthday">
+
+        </div>
+
+        <div class="form-group">
+          <label>Payment Amount</label>
+          <input class="form-control" type="text" id="total-money">
+        </div>
+
+        <div class="modal-footer">
+          <button class="btn btn-secondary" type="submit">Add new</button>
+          <button class="btn btn-primary" type="submit" data-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
