--- a/case2/src/app/customer/customer/customer.component.html
+++ b/case2/src/app/customer/customer/customer.component.html
@@ -16,11 +16,12 @@
         <thead>
         <tr>
           <th class="text-center">#</th>
-          <th class="text-center">Id Customer</th>
           <th class="text-center">Name</th>
           <th class="text-center">Gender</th>
-          <th class="text-center">Identity Card</th>
-          <th class="text-center">Phone Number</th>
+          <th class="text-center">Id Card</th>
+          <th class="text-center">Day Of Birth</th>
+          <th class="text-center">Phone </th>
+          <th class="text-center">Email</th>
           <th class="text-center">Address</th>
           <th class="text-center">Customer Type</th>
           <th class="text-center">Update</th>
@@ -28,15 +29,16 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-          <td>1</td>
-          <td>KH-1111</td>
-          <td>Võ Tiến Đạt</td>
-          <td>Nam</td>
-          <td>123456789</td>
-          <td>0336761813</td>
-          <td>Đà Nẵng</td>
-          <td>Diamond</td>
+        <tr *ngFor="let customer of customer ; index as i ">
+          <td>{{i+1}}</td>
+          <td>{{customer.customerName}}</td>
+          <td>{{customer.customerGender}}</td>
+          <td>{{customer.customerIdCard}}</td>
+          <td>{{customer.customerBirthday}}</td>
+          <td>{{customer.customerPhone}}</td>
+          <td>{{customer.customerEmail}}</td>
+          <td>{{customer.customerAddress}}</td>
+          <td>{{customer.customerTypeName}}</td>
 
           <td>
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModalEditCustomer">
@@ -65,144 +67,6 @@
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Delete</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>KH-2222</td>
-          <td>Nguyễn Duy Trung</td>
-          <td>Nam</td>
-
-          <td>222323212342</td>
-          <td>09921123123</td>
-          <td>Đà Nẵng</td>
-          <td>Platinum</td>
-
-          <td>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModalEditCustomer">
-              Update
-            </button>
-          </td>
-          <td>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-                    data-bs-target="#exampleModal">
-              Delete
-            </button>
-
-            <!-- Modal -->
-            <div class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel"
-                 aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title">Delete Customer</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                            aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body" style="color: black">
-                    You want delete Nguyễn Duy Trung ?
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
-                    </button>
-                    <button type="button" class="btn btn-primary">Delete</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </td>
-        </tr>
-
-        <tr>
-          <td>3</td>
-          <td>KH-1333</td>
-          <td>Huỳnh Kim Hiếu</td>
-          <td>Nữ</td>
-
-          <td>222232321</td>
-          <td>777777745</td>
-          <td>Đà Nẵng</td>
-          <td>Gold</td>
-
-          <td>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModalEditCustomer">
-              Update
-            </button>
-          </td>
-          <td>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-                    data-bs-target="#exampleModal">
-              Delete
-            </button>
-
-            <!-- Modal -->
-            <div class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel"
-                 aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title">Delete Customer</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                            aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body" style="color: black">
-                    You want delete Huỳnh Kim Hiếu ?
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
-                    </button>
-                    <button type="button" class="btn btn-primary">Delete</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>KH-4444</td>
-          <td>Nguyễn Hữu Toàn</td>
-          <td>Nam</td>
-
-          <td>577756656</td>
-          <td>683453534</td>
-          <td>Đà Nẵng</td>
-          <td>Silver</td>
-          <td>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModalEditCustomer">
-              Update
-            </button>
-          </td>
-          <td>
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-                    data-bs-target="#exampleModal">
-              Delete
-            </button>
-
-            <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                 aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Delete Customer</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                            aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body" style="color: black">
-                    You want delete Nguyễn Hữu Toàn ?
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
-                    </button>
                     <button type="button" class="btn btn-primary">Delete</button>
                   </div>
                 </div>
