--- a/case2/src/app/customer/component/customer/customer.component.html
+++ b/case2/src/app/customer/component/customer/customer.component.html
@@ -1,8 +1,6 @@
 <div class="bradcam_area breadcam_bg">
   <h3>Customer</h3>
 </div>
-
-<!-- List-->
 <div class="bg-menu table text-center table  font-weight-bold" style="padding-top: 100px">
   <div class="container-fluid body">
     <div class="center container-fluid">
@@ -30,8 +28,9 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let customer of customer ; index as i ">
+        <tr *ngFor="let customer of customers ; index as i ">
           <td>{{i + 1}}</td>
+          <td>{{customer.customerCode}}</td>
           <td>{{customer.customerName}}</td>
           <td>
             <span>{{customer.customerGender == 1}}Male</span>
@@ -44,23 +43,16 @@
           <td>{{customer.customerEmail}}</td>
           <td>{{customer.customerAddress}}</td>
           <td>{{customer.customerType.customerTypeName}}</td>
-
           <td>
-<!--            <a routerLink="/update-customer/{{customer.customerId}}" (click)="update()"-->
-<!--               data-toggle="modal"-->
-<!--               data-target="#form-update">-->
-<!--              <button class="btn btn-light">Update</button>-->
-<!--            </a>-->
+            <button type="button" class="btn btn-warning" data-bs-toggle="modal"
+                    [routerLink]="['/customer/edit', customer.customerId]">Edit
+            </button>
           </td>
           <td>
-            <a style="color: white" href="#"
-               (click)="valueOf(customer.customerId, customer.customerName)"
-               data-toggle="modal"
-               data-target="#delete">
-              <button class="btn btn-light">
-                Delete
-              </button>
-            </a>
+            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete"
+                    (click)="openDelete(customer.customerId,customer.customerName)">
+              Delete
+            </button>
           </td>
         </tr>
         </tbody>
@@ -74,145 +66,25 @@
       <button class="btn btn-light">Next</button>
     </div>
   </div>
-</div>
-<!--<app-modal-update-customer></app-modal-update-customer>-->
-<!--<app-modal-create-customer></app-modal-create-customer>-->
-
-
-<form [formGroup]="customerFormUpdate" (ngSubmit)="onSubmitCreate()" novalidate>
-  <div class="modal " id="form-create">
+  <div class="modal fade" id="delete" tabindex="-1" aria-labelledby="exampleModalLabel"
+       aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
-        <div class="p-3 bg-modal">
-          <h4 style="text-align: center">Thêm thông tin khách hàng</h4>
-
-
-          <input class="form-control" type="text" formControlName="customerId" hidden [value]="null">
-
-
-          <div class="form-group">
-            <label>Mã khách hàng</label>
-            <input class="form-control" type="text" formControlName="customerCode">
-          </div>
-
-          <div class="mb-3 text-danger" *ngIf="customerFormUpdate.controls.customerCode.hasError('required')
-        && (customerFormUpdate.controls.customerCode.dirty || customerFormUpdate.controls.customerCode.touched)">
-            Input code, pls!!!
-          </div>
-
-          <div class="mb-3 text-danger" *ngIf="customerFormUpdate.controls.customerCode.hasError('pattern')
-        && (customerFormUpdate.controls.customerCode.dirty || customerFormUpdate.controls.customerCode.touched)">
-            Wrong format !!!
-          </div>
-
-          <div class="form-group">
-            <label>Tên khách hàng</label>
-            <input class="form-control" type="text" formControlName="customerName">
-          </div>
-
-          <div class="mb-3 text-danger" *ngIf="customerFormUpdate.controls.customerName.hasError('required')
-        && (customerFormUpdate.controls.customerName.dirty || customerFormUpdate.controls.customerName.touched)">
-            Input name, pls!!!
-          </div>
-
-          <div class="form-group">
-            <label>Ngày sinh</label>
-            <input class="form-control" type="date" formControlName="customerBirthday">
-          </div>
-
-          <div class="mb-3 text-danger" *ngIf="customerFormUpdate.controls.customerBirthday.hasError('required')
-        && (customerFormUpdate.controls.customerBirthday.dirty || customerFormUpdate.controls.customerBirthday.touched)">
-            Input day of birth, pls!!!
-          </div>
-
-          <div class="form-group">
-            <label>Giới tính</label>
-            <select formControlName="customerGender" class="form-control w-100">
-              <option value="">----- Vui lòng chọn -----</option>
-              <option value="0">Nam</option>
-              <option value="1">Nữ</option>
-              <option value="2">Khác</option>
-            </select>
-          </div>
-
-          <div class="mb-3 text-danger" *ngIf="customerFormUpdate.controls.customerGender.hasError('required')
-        && (customerFormUpdate.controls.customerGender.dirty || customerFormUpdate.controls.customerGender.touched)">
-            Choose gender, pls!!!
-          </div>
-
-          <div class="form-group">
-            <label>Căn cước công dân</label>
-            <input class="form-control" type="text" formControlName="customerIdCard">
-          </div>
-
-          <div class="mb-3 text-danger" *ngIf="customerFormUpdate.controls.customerIdCard.hasError('required')
-        && (customerFormUpdate.controls.customerIdCard.dirty || customerFormUpdate.controls.customerIdCard.touched)">
-            Input Id Card, pls!!!
-          </div>
-
-          <div class="mb-3 text-danger" *ngIf="customerFormUpdate.controls.customerIdCard.hasError('pattern')
-        && (customerFormUpdate.controls.customerIdCard.dirty || customerFormUpdate.controls.customerIdCard.touched)">
-            Wrong format !!!
-          </div>
-
-          <div class="form-group">
-            <label>Số điện thoại</label>
-            <input class="form-control" type="text" formControlName="customerPhone">
-          </div>
-
-          <div class="mb-3 text-danger" *ngIf="customerFormUpdate.controls.customerPhone.hasError('required')
-        && (customerFormUpdate.controls.customerPhone.dirty || customerFormUpdate.controls.customerPhone.touched)">
-            Input phone number, pls!!!
-          </div>
-
-          <div class="mb-3 text-danger" *ngIf="customerFormUpdate.controls.customerPhone.hasError('pattern')
-        && (customerFormUpdate.controls.customerPhone.dirty || customerFormUpdate.controls.customerPhone.touched)">
-            Wrong format!!!
-          </div>
-
-          <div class="form-group">
-            <label>Email</label>
-            <input class="form-control" type="text" formControlName="customerEmail">
-          </div>
-
-          <div class="mb-3 text-danger" *ngIf="customerFormUpdate.controls.customerEmail.hasError('required')
-        && (customerFormUpdate.controls.customerEmail.dirty || customerFormUpdate.controls.customerEmail.touched)">
-            Input email, pls!!!
-          </div>
-
-          <div class="mb-3 text-danger" *ngIf="customerFormUpdate.controls.customerEmail.hasError('email')
-        && (customerFormUpdate.controls.customerEmail.dirty || customerFormUpdate.controls.customerEmail.touched)">
-            Wrong format !!!
-          </div>
-
-          <div class="form-group">
-            <label>Địa chỉ</label>
-            <input class="form-control" type="text" formControlName="customerAddress">
-          </div>
-
-          <div class="mb-3 text-danger" *ngIf="customerFormUpdate.controls.customerAddress.hasError('required')
-        && (customerFormUpdate.controls.customerAddress.dirty || customerFormUpdate.controls.customerAddress.touched)">
-            Input address, pls!!!
-          </div>
-
-          <div class="form-group">
-            <label>Kiểu khách hàng</label>
-            <select class="form-control w-100" formControlName="customerType">
-              <option value="">----- Vui lòng chọn -----</option>
-              <option [ngValue]="tc.customerTypeId"
-                      *ngFor="let tc of   ">{{tc.customerTypeName}}</option>
-            </select>
-          </div>
-
-          c
-
-          <button class="btn btn-dark" (click)="onSubmitCreate()" [disabled]="customerFormUpdate.invalid"
-                  data-dismiss="modal">Add new
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Delete Customer</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"
+                  aria-label="Close"></button>
+        </div>
+        <div class="modal-body" style="color: red">
+          Do you want delete customer :{{name}}
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+            Cancel
           </button>
-          &nbsp;
-          <button class="btn btn-dark" type="submit" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="delete(id)">Delete</button>
         </div>
       </div>
     </div>
   </div>
-</form>
+</div>
